--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -151,6 +151,8 @@
         border: dotted @pacific;
         border-width: 1px 0;
         margin-right: 0;
+        width: 100%;
+        text-align: left;
 
         &:after {
             margin-bottom: -0.625em;
