--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -134,19 +134,24 @@
     =================
 -->
 
-<div class="beta-banner">
+<div class="beta-banner expandable expandable__expanded">
     <div class="wrapper wrapper__match-content">
         <div class="beta-banner_head">
             <span class="cf-icon cf-icon-error-round beta-banner_icon"></span>
             This beta site is a work in progress.
         </div>
-        <p class="beta-banner_desc">
+        <p class="beta-banner_desc expandable_content">
             We're prototyping new designs. Expect some errors and inaccuracies.
             Accurate information continues at
             <a href="http://www.consumerfinance.gov/">www.consumerfinance.gov</a>.
         </p>
-        <button class="btn beta-banner_close-btn">
-            Close <span class="cf-icon cf-icon-delete"></span>
+        <button class="btn beta-banner_btn expandable_target" id="beta-banner_close-btn">
+            <span class="expandable_cue-close">
+                Collapse <span class="cf-icon cf-icon-up"></span>
+            </span>
+            <span class="expandable_cue-open">
+                More info <span class="cf-icon cf-icon-down"></span>
+            </span>
         </button>
     </div>
 </div>
