--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5963,149 +5963,71 @@ select[multiple].focus {
    cfgov-refresh
    demo
    ========================================================================== */
-.beta-banner {
-  padding: 30px 0;
-  background: #ffecd1;
+.demo-banner {
+  padding: 0.5em 1em;
+  background: #43484e;
+  color: #ffffff;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
 }
-.beta-banner em,
-.beta-banner i {
+.demo-banner em,
+.demo-banner i {
   font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
   font-style: italic;
   font-weight: normal;
 }
-.lt-ie9 .beta-banner em,
-.lt-ie9 .beta-banner i {
+.lt-ie9 .demo-banner em,
+.lt-ie9 .demo-banner i {
   font-style: normal !important;
 }
-.beta-banner strong,
-.beta-banner b {
+.demo-banner strong,
+.demo-banner b {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
 }
-.lt-ie9 .beta-banner strong,
-.lt-ie9 .beta-banner b {
+.lt-ie9 .demo-banner strong,
+.lt-ie9 .demo-banner b {
   font-weight: normal !important;
 }
 @media only all and (max-width: 37.4375em) {
-  .beta-banner {
+  .demo-banner {
     font-size: 0.875em;
   }
 }
-.beta-banner_head {
-  margin-top: 0;
-  margin-bottom: 0.27777778em;
-  font-size: 1.125em;
+.demo-banner_back-link {
+  padding: 0.25em 0;
+  margin-right: 1em;
+}
+.demo-banner_back-link:link,
+.demo-banner_back-link:visited {
+  color: #7fb8e6;
+}
+.demo-banner_back-link:hover,
+.demo-banner_back-link:focus {
+  color: #328ed8;
+}
+.demo-banner_back-link:active {
+  color: #babbbd;
+}
+@media only all and (min-width: 37.5em) {
+  .demo-banner_back-link {
+    padding: 0;
+    float: left;
+  }
+}
+.demo-banner b {
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
-  line-height: 1.22222222;
 }
-.lt-ie9 .beta-banner_head {
+.lt-ie9 .demo-banner b {
   font-weight: normal !important;
 }
-.beta-banner_icon {
-  color: #ff9e1b;
-}
-.beta-banner_desc {
-  margin-bottom: 0;
-}
-.beta-banner_close-btn {
-  width: 100%;
-  margin-top: 15px;
-}
-.beta-banner_close-btn,
-.beta-banner_close-btn:link,
-.beta-banner_close-btn:visited {
-  background-color: #75787b;
-  color: #ffffff;
-}
-.beta-banner_close-btn:hover,
-.beta-banner_close-btn.hover {
-  background-color: #919395;
-}
-.beta-banner_close-btn:focus,
-.beta-banner_close-btn.focus {
-  background-color: #919395;
-  outline-color: #75787b;
-}
-.beta-banner_close-btn:active,
-.beta-banner_close-btn.active {
-  background-color: #43484e;
-}
-@media only all and (max-width: 30em) {
-  .beta-banner_close-btn .cf-icon-delete {
-    display: none;
-  }
-}
-@media only all and (min-width: 30.0625em) {
-  .beta-banner_close-btn {
-    padding: 0;
-    border-bottom: 1px dotted #0072ce;
-    border-radius: 0;
-    margin: 0.57142857em 0;
-    width: auto;
-    padding: 15px;
-    margin: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    color: #101820;
-    border-color: #101820;
-    border-bottom-width: 0 !important;
-    text-transform: lowercase;
-  }
-  .beta-banner_close-btn,
-  .beta-banner_close-btn:link,
-  .beta-banner_close-btn:visited {
-    background-color: transparent;
-    color: #0072ce;
-  }
-  .beta-banner_close-btn:hover,
-  .beta-banner_close-btn.hover {
-    border-bottom: 1px solid #7fb8e6;
-    background-color: transparent;
-    color: #7fb8e6;
-  }
-  .beta-banner_close-btn:focus,
-  .beta-banner_close-btn.focus {
-    border-bottom-style: solid;
-    background-color: transparent;
-    outline: thin dotted #0072ce;
-  }
-  .beta-banner_close-btn:active,
-  .beta-banner_close-btn.active {
-    border-bottom: 1px solid #002d72;
-    background-color: transparent;
-    color: #002d72;
-  }
-  .beta-banner_close-btn:visited,
-  .beta-banner_close-btn.visited {
-    border-color: #101820;
-    color: #101820;
-  }
-  .beta-banner_close-btn:hover,
-  .beta-banner_close-btn.hover {
-    border-color: #43484e;
-    color: #43484e;
-  }
-  .beta-banner_close-btn:focus,
-  .beta-banner_close-btn.focus {
-    border-color: #43484e;
-    color: #43484e;
-  }
-  .beta-banner_close-btn:active,
-  .beta-banner_close-btn.active {
-    border-color: #101820;
-    color: #101820;
-  }
-}
-@media only all and (min-width: 50.0625em) {
-  .beta-banner_close-btn {
-    top: -30px;
+@media only all and (max-width: 37.4375em) {
+  .demo-banner b {
+    display: block;
   }
 }
 .demo-placeholder {
@@ -6271,6 +6193,33 @@ img {
    cfgov-refresh
    capital framework enhancements
    ========================================================================== */
+/* topdoc
+  name: Proposed Superheader line-height tweak
+  family: cfgov-cf-enhancements
+  notes:
+    - "The current superheader line-height is a little tall.
+       This proposes reducing it."
+  patterns:
+    - name: .superheader
+      markup: |
+        <h1 class="superheader">
+            Here's a long header that will hopefully break
+            break onto two lines.
+        </h1>
+  tags:
+    - cfgov-cf-enhancements
+*/
+.superheader {
+  margin-bottom: 0.1875em;
+  font-size: 3em;
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 1.25;
+}
+.lt-ie9 .superheader {
+  font-weight: normal !important;
+}
 /* topdoc
   name: Width utilities
   family: cfgov-cf-enhancements
@@ -6947,7 +6896,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 }
 @media only all and (max-width: 50em) {
   .header_logo {
-    width: 160px;
+    width: 190px;
     height: 40px;
     margin: 10px;
   }
@@ -15396,6 +15345,160 @@ a.focus .summary_header {
    cfgov-refresh
    Beta splash page and banner
    ========================================================================== */
+.beta-banner {
+  padding: 15px 0;
+  background: #ffecd1;
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  -webkit-transition: padding 0.2s ease-out;
+  transition: padding 0.2s ease-out;
+}
+.beta-banner em,
+.beta-banner i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+.lt-ie9 .beta-banner em,
+.lt-ie9 .beta-banner i {
+  font-style: normal !important;
+}
+.beta-banner strong,
+.beta-banner b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+.lt-ie9 .beta-banner strong,
+.lt-ie9 .beta-banner b {
+  font-weight: normal !important;
+}
+.beta-banner.expandable__expanded {
+  padding: 30px 0;
+}
+@media only all and (max-width: 37.4375em) {
+  .beta-banner {
+    font-size: 0.875em;
+  }
+}
+.beta-banner_head {
+  margin-top: 0;
+  margin-bottom: 0.27777778em;
+  font-size: 1.125em;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.22222222;
+  margin-bottom: 0;
+}
+.lt-ie9 .beta-banner_head {
+  font-weight: normal !important;
+}
+.expandable__expanded .beta-banner_head {
+  margin-bottom: 0.3125em;
+}
+.beta-banner_icon {
+  color: #ff9e1b;
+}
+.beta-banner_desc {
+  margin-bottom: 0;
+}
+.beta-banner_btn {
+  width: 100%;
+  margin-top: 15px;
+}
+.beta-banner_btn,
+.beta-banner_btn:link,
+.beta-banner_btn:visited {
+  background-color: #75787b;
+  color: #ffffff;
+}
+.beta-banner_btn:hover,
+.beta-banner_btn.hover {
+  background-color: #919395;
+}
+.beta-banner_btn:focus,
+.beta-banner_btn.focus {
+  background-color: #919395;
+  outline-color: #75787b;
+}
+.beta-banner_btn:active,
+.beta-banner_btn.active {
+  background-color: #43484e;
+}
+@media only all and (max-width: 30em) {
+  .beta-banner_btn .cf-icon-delete {
+    display: none;
+  }
+}
+@media only all and (min-width: 30.0625em) {
+  .beta-banner_btn {
+    padding: 0;
+    border-bottom: 1px dotted #0072ce;
+    border-radius: 0;
+    margin: 0.57142857em 0;
+    width: auto;
+    padding: 15px;
+    margin: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #101820;
+    border-color: #101820;
+    border-bottom-width: 0 !important;
+    text-transform: lowercase;
+  }
+  .beta-banner_btn,
+  .beta-banner_btn:link,
+  .beta-banner_btn:visited {
+    background-color: transparent;
+    color: #0072ce;
+  }
+  .beta-banner_btn:hover,
+  .beta-banner_btn.hover {
+    border-bottom: 1px solid #7fb8e6;
+    background-color: transparent;
+    color: #7fb8e6;
+  }
+  .beta-banner_btn:focus,
+  .beta-banner_btn.focus {
+    border-bottom-style: solid;
+    background-color: transparent;
+    outline: thin dotted #0072ce;
+  }
+  .beta-banner_btn:active,
+  .beta-banner_btn.active {
+    border-bottom: 1px solid #002d72;
+    background-color: transparent;
+    color: #002d72;
+  }
+  .beta-banner_btn:visited,
+  .beta-banner_btn.visited {
+    border-color: #101820;
+    color: #101820;
+  }
+  .beta-banner_btn:hover,
+  .beta-banner_btn.hover {
+    border-color: #43484e;
+    color: #43484e;
+  }
+  .beta-banner_btn:focus,
+  .beta-banner_btn.focus {
+    border-color: #43484e;
+    color: #43484e;
+  }
+  .beta-banner_btn:active,
+  .beta-banner_btn.active {
+    border-color: #101820;
+    color: #101820;
+  }
+}
+@media only all and (min-width: 50.0625em) {
+  .beta-banner_btn {
+    top: -11px;
+  }
+}
 .beta-hero {
   min-height: 420px;
   padding: 1.5625em 15px;
@@ -15461,13 +15564,16 @@ a.focus .summary_header {
 }
 @media only all and (min-width: 37.5625em) {
   .beta-hero_title {
+    line-height: 1.375;
     margin-bottom: 0.1875em;
     font-size: 3em;
     font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
-    line-height: 1.375;
     line-height: 1.25;
+  }
+  .lt-ie9 .beta-hero_title {
+    font-weight: normal !important;
   }
   .lt-ie9 .beta-hero_title {
     font-weight: normal !important;
@@ -15481,6 +15587,7 @@ a.focus .summary_header {
   font-style: normal;
   font-weight: 500;
   line-height: 1.22222222;
+  max-width: 32em;
   margin: 0 auto 1em;
 }
 .lt-ie9 .beta-hero_desc {
@@ -15518,11 +15625,6 @@ a.focus .summary_header {
     font-weight: normal !important;
   }
 }
-@media only all and (min-width: 64em) {
-  .beta-hero_desc {
-    width: 32em;
-  }
-}
 .progress-charts:after {
   content: "";
   display: table;
@@ -15550,7 +15652,7 @@ a.focus .summary_header {
 }
 @media only all and (min-width: 30em) {
   .progress-charts_container {
-    width: 33.333333333%;
+    width: 33.33333333%;
     height: 150px;
     padding: 0 1em;
     float: left;
@@ -15570,14 +15672,14 @@ a.focus .summary_header {
 }
 .chart-bg {
   position: relative;
-  background: #E3E4E5;
+  background: #e3e4e5;
   width: 100%;
   height: 100%;
 }
 .chart-pct {
   position: absolute;
   bottom: 0;
-  background: #FF931B;
+  background: #ff9e1b;
   width: 100%;
 }
 .chart-name {
