Small tweaks; JS formatting

--- a/static/css/beta.less
+++ b/static/css/beta.less
@@ -5,6 +5,7 @@
 
 .beta-banner {
     padding: (@grid_gutter-width / 2) 0;
+    margin-bottom: 0;
     background: @gold-20;
     .webfont-regular();
     transition: padding 0.2s ease-out;
@@ -106,7 +107,6 @@
 
     .respond-to-min(601px, {
         .superheader();
-        // line-height: 1.25; // Update in cf-core .superheader?
     });
 }
 
