--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15425,6 +15425,7 @@ a.focus .summary_header {
    ========================================================================== */
 .beta-banner {
   padding: 15px 0;
+  margin-bottom: 0;
   background: #ffecd1;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
