--- a/static/css/beta.less
+++ b/static/css/beta.less
@@ -146,6 +146,9 @@
 }
 
 .progress-charts_chart {
+    width: 100px;
+    height: 100px;
+
     .respond-to-max(479px, {
         margin-right: 1em;
         float: left;
@@ -159,7 +162,7 @@
     height: 100%;
 }
 
-.chart-pct {
+.bar-chart {
     position: absolute;
     bottom: 0;
     background: @gold;
