Replace SVG beta illustration with PNGs, other tweaks

--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -542,14 +542,14 @@
   .sliding-nav_trigger {
     display: block;
     width: 60px;
-    padding: 10px;
+    height: 60px;
+    padding: 19px 10px 17px;
     border: none;
     border-right: 1px solid #babbbd;
     float: left;
     background: #ffffff;
     color: #75787b;
     font-size: 1.5em;
-    line-height: 40px;
   }
   .sliding-nav_trigger:focus {
     outline: 1px dotted #101820;
