--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -368,14 +368,14 @@
     .sliding-nav_trigger {
         display: block;
         width: 60px;
-        padding: 10px;
+        height: 60px;
+        padding: 19px 10px 17px;
         border: none;
         border-right: 1px solid @gray-50;
         float: left;
         background: @white;
         color: @gray;
         font-size: 1.5em;
-        line-height: 40px;
 
         &:focus {
             outline: 1px dotted @black;
