Finish implementation of localStorage var to keep track of collapsed beta banner

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -134,7 +134,7 @@
     =================
 -->
 
-<div class="beta-banner expandable expandable__expanded">
+<div class="beta-banner expandable" id="beta-banner">
     <div class="wrapper wrapper__match-content">
         <div class="beta-banner_head">
             <span class="cf-icon cf-icon-error-round beta-banner_icon"></span>
@@ -145,7 +145,7 @@
             Accurate information continues at
             <a href="http://www.consumerfinance.gov/">www.consumerfinance.gov</a>.
         </p>
-        <button class="btn beta-banner_btn expandable_target" id="beta-banner_close-btn">
+        <button class="btn beta-banner_btn expandable_target" id="beta-banner_btn">
             <span class="expandable_cue-close">
                 Collapse <span class="cf-icon cf-icon-up"></span>
             </span>
